--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "drupal/social_post_linkedin",
     "type": "drupal-module",
-    "description": "Social Post Linkedin for Linkedin",
+    "description": "Social Post integration for LinkedIn",
     "keywords": ["Drupal"],
     "license": "GPL-2.0+",
     "homepage": "https://www.drupal.org/project/social_post_linkedin",
