--- a/social_post_linkedin.permissions.yml
+++ b/social_post_linkedin.permissions.yml
@@ -1,3 +1,3 @@
 perform linkedin autoposting tasks:
-  title: 'Perform Linkedin autoposting'
-  description: "Perform Linkedin linkedin to the user's accounts"
+  title: 'Perform LinkedIn autosharing'
+  description: "Perform authosharing tasks in user's LinkedIn accounts."
