--- a/social_post_linkedin.routing.yml
+++ b/social_post_linkedin.routing.yml
@@ -1,8 +1,8 @@
 social_post_linkedin.settings_form:
   path: '/admin/config/social-api/social-post/linkedin'
   defaults:
-    _title: 'Linkedin Settings'
-    _form: 'Drupal\social_post_linkedin\Form\LinkedinPostSettingsForm'
+    _title: 'LinkedIn Settings'
+    _form: 'Drupal\social_post_linkedin\Form\LinkedInPostSettingsForm'
   requirements:
     _permission: 'administer social api autoposting'
 
@@ -10,7 +10,7 @@ social_post_linkedin.settings_form:
 social_post_linkedin.redirect_to_linkedin:
   path: '/user/social-post/linkedin/auth'
   defaults:
-    _controller: 'Drupal\social_post_linkedin\Controller\LinkedinPostController::redirectToProvider'
+    _controller: 'Drupal\social_post_linkedin\Controller\LinkedInPostController::redirectToProvider'
   requirements:
     _permission: 'perform linkedin autoposting tasks'
   options:
@@ -19,7 +19,7 @@ social_post_linkedin.redirect_to_linkedin:
 social_post_linkedin.callback:
   path: '/user/social-post/linkedin/auth/callback'
   defaults:
-    _controller: 'Drupal\social_post_linkedin\Controller\LinkedinPostController::callback'
+    _controller: 'Drupal\social_post_linkedin\Controller\LinkedInPostController::callback'
   requirements:
     _permission: 'perform linkedin autoposting tasks'
   options:
