--- a/social_post_linkedin.services.yml
+++ b/social_post_linkedin.services.yml
@@ -1,3 +1,3 @@
 services:
   linkedin_post.auth_manager:
-    class: '\Drupal\social_post_linkedin\LinkedinPostAuthManager'
+    class: '\Drupal\social_post_linkedin\LinkedInPostAuthManager'
