Issue #2936436 by sarguna raj M: Fix dependency issues

--- a/social_post_linkedin.info.yml
+++ b/social_post_linkedin.info.yml
@@ -1,11 +1,8 @@
 name: Social Post LinkedIn
 type: module
 description: Social Post integration for LinkedIn
-# core: 8.x
+core: 8.x
 package: Social
 configure: social_post_linkedin.settings_form
 dependencies:
-  - social_post
-
-# Information added by Drupal.org packaging script on 2017-04-20
-core: '8.x'
+  - drupal:social_post (>= 8.x-2.x)
