--- a/social_post_linkedin.links.task.yml
+++ b/social_post_linkedin.links.task.yml
@@ -10,6 +10,5 @@ social_post.linkedin.settings.tab:
 
 entity.social_post_linkedin_user.collection:
   title: 'Users'
-  route_name: entity.social_post.collection
+  route_name: social_post_linkedin.user.collection
   parent_id: social_post_linkedin.settings
-  route_parameters: { 'provider': 'linkedin' }
