--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "source": "http://cgit.drupalcode.org/social_post_linkedin"
     },
     "require" : {
-        "league/oauth2-linkedin": "^2.0"
+        "league/oauth2-linkedin": "^5.1.1",
+        "drupal/social_auth": "^2.0"
     },
     "authors": [
         {
